--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -18,7 +18,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Question 5"
+    "# Question 5"
    ],
    "metadata": {
     "collapsed": false,
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Normal RMSE: 0.001115604409822953\nExp RMSE: 0.013756365900481626\n"
+      "Normal RMSE: 0.004016624176857915\nExp RMSE: 0.02849942661032183\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Question 6"
+    "# Question 6"
    ],
    "metadata": {
     "collapsed": false,
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "outputs": [
     {
      "output_type": "stream",
@@ -93,10 +93,9 @@
     }
    ],
    "source": [
-    "tips = sn.load_dataset('tips')\n",
-    "tips_transformed = pd.get_dummies(tips)\n",
-    "y = tips_transformed[['tip']]\n",
-    "x1 = tips_transformed[['total_bill', 'size']]\n",
+    "tips = pd.get_dummies(sn.load_dataset('tips'))\n",
+    "y = tips[['tip']]\n",
+    "x1 = tips[['total_bill', 'size']]\n",
     "x2 = x1.assign(interaction=x1['total_bill'] * x1['size'])\n",
     "for name, x in [['Model 1', x1], ['Model 2', x2]]:\n",
     "    ols = sm.OLS(y, x.assign(bias=1))\n",
@@ -122,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "Python 3.7.3 64-bit",
+   "name": "python3",
    "display_name": "Python 3.7.3 64-bit",
    "metadata": {
     "interpreter": {
